Remover image tag para forzar build desde Git en Portainer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: ecomdrop-ia-connector:latest
+    # No especificar image para que Portainer construya automáticamente desde Git
     container_name: shopify_app
     
     networks:
