--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,24 @@
 .cache
 build
 node_modules
+.env
+.env.*
+.git
+.gitignore
+README.md
+.vscode
+.idea
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+coverage
+.shopify
+.shopify.lock
+.react-router
+*.md
+!README.md
+prisma/dev.sqlite
+prisma/dev.sqlite-journal
+database.sqlite
