--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       SHOPIFY_API_KEY: ${SHOPIFY_API_KEY}
       SHOPIFY_API_SECRET: ${SHOPIFY_API_SECRET}
       SCOPES: read_products,write_products,read_orders,read_themes,write_themes
-      SHOPIFY_APP_URL: https://shopify.ecomdrop.io
+      SHOPIFY_APP_URL: https://connector.ecomdrop.io
       
       ## 🌐 Configuración
       NODE_ENV: production
@@ -110,7 +110,7 @@ services:
       
       labels:
         - traefik.enable=true
-        - traefik.http.routers.shopify_app.rule=Host(`shopify.ecomdrop.io`)
+        - traefik.http.routers.shopify_app.rule=Host(`connector.ecomdrop.io`)
         - traefik.http.routers.shopify_app.entrypoints=websecure
         - traefik.http.routers.shopify_app.tls.certresolver=letsencryptresolver
         - traefik.http.routers.shopify_app.service=shopify_app
