--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,79 @@
-.cache
-build
+# Dependencies
 node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Build outputs
+build
+dist
+.cache
+.next
+out
+
+# Development files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+*.log
+*.swp
+*.swo
+*~
+
+# IDE files
+.vscode
+.idea
+*.sublime-project
+*.sublime-workspace
+.DS_Store
+
+# Testing
+coverage
+.nyc_output
+*.test.js
+*.test.ts
+*.test.tsx
+*.spec.js
+*.spec.ts
+*.spec.tsx
+
+# Documentation
+*.md
+!README.md
+docs
+
+# Git
+.git
+.gitignore
+.gitattributes
+
+# Docker
+Dockerfile*
+docker-compose*.yml
+.dockerignore
+
+# Windows specific
+Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# macOS specific
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Linux specific
+*~
+.directory
+
+# Prisma dev database
+prisma/dev.sqlite
+prisma/dev.sqlite-journal
+
+# Temporary files
+tmp
+temp
+*.tmp
