--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,8 +127,7 @@ services:
         - traefik.http.middlewares.shopify_app-headers.headers.sslredirect=true
     
     depends_on:
-      mysql:
-        condition: service_healthy
+      - mysql
 
 ## --------------------------- REDES --------------------------- ##
 
