--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,26 +38,7 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-      placement:
-        constraints:
-          - node.role == manager
       
-      resources:
-        limits:
-          cpus: "1.5"
-          memory: 1536M
-        reservations:
-          cpus: "0.5"
-          memory: 768M
-      
-      restart_policy:
-        condition: on-failure
-        delay: 10s
-        max_attempts: 3
-        window: 120s
-
-  ## --------------------------- SHOPIFY APP --------------------------- ##
-  
   shopify_app:
     image: shopify-app_shopify_app:latest
     
@@ -66,8 +47,7 @@ services:
     
     environment:
       ## 🗄️ Base de Datos
-      DATABASE_URL: mysql://shopify_user:${MYSQL_PASSWORD}@mysql:3306/shopify_app
-      
+      DATABASE_URL: mysql://shopify_user:${MYSQL_PASSWORD}
       ## 🔐 Shopify API
       SHOPIFY_API_KEY: ${SHOPIFY_API_KEY}
       SHOPIFY_API_SECRET: ${SHOPIFY_API_SECRET}
@@ -90,19 +70,7 @@ services:
     
     deploy:
       mode: replicated
-      replicas: 1
-      placement:
-        constraints:
-          - node.role == manager
-      
-      resources:
-        limits:
-          cpus: "1.5"
-          memory: 1536M
-        reservations:
-          cpus: "0.5"
-          memory: 768M
-      
+      replicas: 1  
       restart_policy:
         condition: on-failure
         delay: 15s
